[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]

[node name="MenuCanvas" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -36.0
margin_right = 128.0
margin_bottom = 36.0

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0
disabled = true
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 256.0
margin_bottom = 44.0
disabled = true
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 68.0
disabled = true
text = "Quit"

[node name="TextSpeedLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 86.0
text = "Text Speed"
align = 1

[node name="SlowTextButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -840, -130 )
text = "Slow"

[node name="MedTextButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 92.0
text = "Normal"

[node name="FastTextButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 92.0
text = "Fast"

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 86.0
text = "Master Volume"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 88.0
max_value = 86.0
value = 80.0

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 86.0
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 88.0
max_value = 86.0
value = 80.0

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 86.0
text = "SFX Volume"

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 88.0
max_value = 86.0
value = 80.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 256.0
margin_bottom = 92.0
disabled = true
text = "Back"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SlowTextButton" to="." method="_on_SlowTextButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MedTextButton" to="." method="_on_MedTextButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FastTextButton" to="." method="_on_FastTextButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXVolumeSlider" to="." method="_on_SFXVolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
